--- a/02.파이썬문법/01.다양한형태의제어문.ipynb
+++ b/02.파이썬문법/01.다양한형태의제어문.ipynb
@@ -26,10 +26,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "->게임을 시작합니다.\n",
+      "->랭킹보기\n",
+      "다시 입력해주세요.\n",
+      "다시 입력해주세요.\n",
+      "다시 입력해주세요.\n",
+      "->게임을 종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실습문제 30\n",
+    "while True:\n",
+    "    menu = int(input(\"메뉴를 입력하세요: 1. 게임시작 2. 랭킹보기 3. 게임종료:\"))\n",
+    "    if menu == 1:\n",
+    "        print(\"->게임을 시작합니다.\")\n",
+    "    elif menu == 2:\n",
+    "        print(\"->랭킹보기\")\n",
+    "    elif menu == 3:\n",
+    "        print(\"->게임을 종료합니다.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"다시 입력해주세요.\")\n",
+    "    \n",
+    "        \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
