--- a/03.정적페이지크롤링/02.네이버지식인1단계.ipynb
+++ b/03.정적페이지크롤링/02.네이버지식인1단계.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'내일 빼빼로 데이인데 어떡해할까요?'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "내일 빼빼로 데이인데 어떡해할까요? https://kin.naver.com/qna/detail.naver?d1id=20&dirId=2001&docId=432409634&qb=67m867m866Gc642w7J20&enc=utf8§ion=kin&rank=1&search_sort=0&spq=1 2022.11.10. ... 내일이 빼빼로데이인데 빼빼로를 줘야 되나요? 저는 주고는 싶은데 차였는데... 내일이 빼빼로 데이여서 빼빼로를 줘야 하는지 어떻게 해야하는지 고민이 되는 것 같아요.... \n"
+     ]
     }
    ],
    "source": [
@@ -27,9 +24,10 @@
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "anchor = soup.select_one(\"dt > a\")\n",
     "title = anchor.text #제목\n",
-    "link\n",
-    "date\n",
-    "content\n"
+    "link = anchor.attrs['href'] # 링크\n",
+    "date = soup.select_one(\".txt_inline\").text # 날짜\n",
+    "content = soup.select_one(\"dl > dd:nth-of-type(2)\").text # 내용\n",
+    "print(title, link, date, content)"
    ]
   },
   {
