--- a/05.웹사이트자동화/01.셀레니움사용법.ipynb
+++ b/05.웹사이트자동화/01.셀레니움사용법.ipynb
@@ -17,6 +17,8 @@
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "import time\n",
     "\n",
     "driver = webdriver.Chrome(\"c://chromedriver.exe\")\n",
     "driver.get(\"https://www.naver.com\")"
@@ -34,14 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 검색창 찾기\n",
     "search = driver.find_element(By.CSS_SELECTOR, \"#ac_input\")\n",
-    "search.send_keys(\"코딩\")"
+    "search.send_keys(\"코딩\")\n",
+    "time.sleep(2)\n",
+    "\n",
+    "# 엔터 치기\n",
+    "search.send_keys(Keys.ENTER)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
