--- a/05.웹사이트자동화/02.파파고자동화.ipynb
+++ b/05.웹사이트자동화/02.파파고자동화.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\startcoding\\AppData\\Local\\Temp\\ipykernel_2864\\3005536875.py:6: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "C:\\Users\\startcoding\\AppData\\Local\\Temp\\ipykernel_13908\\791898179.py:6: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(\"c://chromedriver.exe\")\n"
      ]
     }
@@ -21,7 +21,8 @@
     "import time\n",
     "\n",
     "driver = webdriver.Chrome(\"c://chromedriver.exe\")\n",
-    "driver.get(\"https://www.naver.com\")"
+    "driver.get(\"https://papago.naver.com/\")\n",
+    "\n"
    ]
   },
   {
@@ -30,9 +31,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. 원하는 태그 한개 찾기\n",
-    "driver.find_element(By.CSS_SELECTOR, \"#NM_FAVORITE > div.group_nav > ul.list_nav.NM_FAVORITE_LIST > li:nth-child(1) > a\").click()\n",
-    "time.sleep(2)"
+    "# 검색창\n",
+    "search = driver.find_element(By.CSS_SELECTOR, \"#txtSource\")\n",
+    "search.send_keys(\"파이썬은 개꿀이다\")\n",
+    "time.sleep(1)"
    ]
   },
   {
@@ -41,21 +43,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 검색창 찾기\n",
-    "search = driver.find_element(By.CSS_SELECTOR, \"#ac_input\")\n",
-    "search.send_keys(\"코딩\")\n",
-    "time.sleep(2)\n",
-    "\n",
-    "# 엔터 치기\n",
-    "search.send_keys(Keys.ENTER)"
+    "# 언어 선택 버튼\n",
+    "driver.find_element(By.CSS_SELECTOR, \"#ddTargetLanguage2Button\").click()\n",
+    "time.sleep(1)\n",
+    "driver.find_element(By.CSS_SELECTOR, \"#ddTargetLanguage2 > div.dropdown_menu___XsI_h.active___3VPGL > ul > li:nth-child(8) > a > span\").click()\n",
+    "time.sleep(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 소리듣기 버튼\n",
+    "driver.find_element(By.CSS_SELECTOR, \"#root > div > div.wrap___1rX6i.rwd.rwd___3Qe-c.banner_active___3MQbf > section > div > div.rwd_layout___2qH8c > div:nth-child(3) > div > div:nth-child(7) > span:nth-child(1) > span > span > button\").click()"
+   ]
   }
  ],
  "metadata": {
