--- a/05.웹사이트자동화/03.새창컨트롤.ipynb
+++ b/05.웹사이트자동화/03.새창컨트롤.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\startcoding\\AppData\\Local\\Temp\\ipykernel_2864\\3005536875.py:6: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "C:\\Users\\startcoding\\AppData\\Local\\Temp\\ipykernel_10356\\3005536875.py:6: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(\"c://chromedriver.exe\")\n"
      ]
     }
@@ -26,28 +26,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. 원하는 태그 한개 찾기\n",
-    "driver.find_element(By.CSS_SELECTOR, \"#NM_FAVORITE > div.group_nav > ul.list_nav.NM_FAVORITE_LIST > li:nth-child(1) > a\").click()\n",
+    "# 검색창\n",
+    "search = driver.find_element(By.CSS_SELECTOR, \"#query\")\n",
+    "search.send_keys(\"파파고\")\n",
+    "search.send_keys(Keys.ENTER)\n",
     "time.sleep(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 검색창 찾기\n",
-    "search = driver.find_element(By.CSS_SELECTOR, \"#ac_input\")\n",
-    "search.send_keys(\"코딩\")\n",
-    "time.sleep(2)\n",
+    "# 파파고 링크\n",
+    "driver.find_element(By.CSS_SELECTOR, \"#main_pack > section.sc_new.sp_nsite._project_site_channel_root._section_nsite_._sp_ntotal._prs_vsd_bas > div > div > div.nsite_tit > div > div.nsite_name > a\").click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 새창으로 드라이버 전환\n",
+    "new_window = driver.window_handles[1]\n",
+    "driver.switch_to.window(new_window)\n",
     "\n",
-    "# 엔터 치기\n",
-    "search.send_keys(Keys.ENTER)"
+    "search = driver.find_element(By.CSS_SELECTOR, \"#txtSource\")\n",
+    "search.send_keys(\"파이썬은 개꿀이다\")\n",
+    "time.sleep(1)"
    ]
   },
   {
