--- a/05.웹사이트자동화/04.코레일자동화.ipynb
+++ b/05.웹사이트자동화/04.코레일자동화.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\startcoding\\AppData\\Local\\Temp\\ipykernel_6712\\1196199924.py:6: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "C:\\Users\\startcoding\\AppData\\Local\\Temp\\ipykernel_6712\\2509575879.py:7: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(\"c://chromedriver.exe\")\n"
      ]
     }
@@ -28,11 +28,46 @@
     "start = driver.find_element(By.CSS_SELECTOR, \"#txtGoStart\")\n",
     "start.clear() # 입력창 비우기\n",
     "start.send_keys(\"대전\")\n",
+    "time.sleep(1)\n",
     "\n",
     "# 도착역\n",
     "end = driver.find_element(By.CSS_SELECTOR, \"#txtGoEnd\")\n",
     "end.clear()\n",
-    "end.send_keys(\"부산\")"
+    "end.send_keys(\"부산\")\n",
+    "time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 시간\n",
+    "s_box = Select(driver.find_element(By.CSS_SELECTOR, \"#time\"))\n",
+    "s_box.select_by_value(\"08\")\n",
+    "time.sleep(1)\n",
+    "\n",
+    "# 인원\n",
+    "p_box = Select(driver.find_element(By.CSS_SELECTOR, \"#people_num\"))\n",
+    "p_box.select_by_value(\"3\")\n",
+    "time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 출발일\n",
+    "# readonly 속성을 자바스크립트 제거\n",
+    "driver.execute_script('document.querySelector(\"#selGoStartDay\").removeAttribute(\"readonly\")')\n",
+    "start_day = driver.find_element(By.CSS_SELECTOR, \"#selGoStartDay\")\n",
+    "start_day.clear()\n",
+    "time.sleep(1)\n",
+    "start_day.send_keys(\"2022.11.15\")\n",
+    "time.sleep(1)"
    ]
   },
   {
@@ -41,13 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 시간\n",
-    "s_box = Select(driver.find_element(By.CSS_SELECTOR, \"#time\"))\n",
-    "s_box.select_by_value(\"08\")\n",
-    "\n",
-    "# 인원\n",
-    "p_box = Select(driver.find_element(By.CSS_SELECTOR, \"#people_num\"))\n",
-    "p_box.select_by_value(\"3\")"
+    "# 예매 버튼\n",
+    "driver.find_element(By.CSS_SELECTOR, '#res_cont_tab01 > form > div > fieldset > p > a > img').click()"
    ]
   }
  ],
