--- a/06.동적인페이지크롤링/03.다음경제뉴스크롤링.ipynb
+++ b/06.동적인페이지크롤링/03.다음경제뉴스크롤링.ipynb
@@ -62,6 +62,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://v.daum.net/v/20221114172451636 연합뉴스 전자·반도체 주요기업 연구개발·투자로 '불황 뚫기' 나섰다 3분기 누계 삼성전자 R&D 18.4조원 '역대 최대' LG전자·SK하이닉스 투자금액 30% 이상 증가 (서울=연합뉴스) 김아람 기자 = 올해 글로벌 경기 침체로 인한 불확실성 확대에도 주요 기업들이 연구개발(R&D)과 투자 확대로 불황 뚫기에 힘쓰고 있다. 14일 삼성전자가 공시한 분기보고서를 보면 삼성전자의 R&D 비용은 올해 3분기 누적 기준 18조4\n",
+      "https://v.daum.net/v/20221114172400587 매일경제 테슬라 급발진 의심 사고...사망 2명·부상 3명, 원인 놓고 공방 중국에서 테슬라 전기차가 급발진으로 추정되는 사고를 내 2명이 숨지고 3명이 다쳤다. 이에 중국 전역에서 테슬라의 기술력을 질타하는 목소리가 나오고 있다. 하지만 테슬라는 운전자의 제동 미숙을 사고 원인으로 지목하고 있다. 14일 상유신문·지무뉴스·환구시보 등에 따르면 지난 5일 중국 광둥성 차오저우시 라오핑현에서 테슬라 모델Y가 빠른 속도로 2㎞를 질주하\n",
+      "https://v.daum.net/v/20221114172354580 서울경제 아시아나 운명의 한 주···美·英 기업결합 심사 나온다 [서울경제] 아시아나항공(020560)의 앞날을 좌우할 ‘운명의 주’가 시작됐다. 대한항공(003490)과의 기업결합에 중대한 영향을 미칠 주요국의 심사 결과 발표가 다가왔기 때문이다. 완전자본잠식은 가까스로 피했지만 아시아나항공은 기업결합 심사 종료 후 대한항공의 자금을 수혈받아야 생존을 도모할 수 있는 만큼 해외 경쟁당국의 심사 결과에 촉각을 곤두세우고\n",
+      "https://v.daum.net/v/20221114172201528 뉴시스 국토부, 화물연대 총파업 예고에 \"국회서 논의 중…내일 면담\" 기사내용 요약 국토부-화물연대, 15일 오후 면담 진행 국토부 측 \"이미 국회서 입법 논의 중\" \"정부가 할 일은 한정적, 대화는 계속\" [서울=뉴시스] 고가혜 기자 = 전국민주노동조합총연맹(민주노총) 소속 화물연대 노동자들이 안전운임 일몰제 폐지 등을 요구하며 5개월 만의 전면 총파업을 다시 선언한 가운데, 국토교통부가 오는 15일 화물연대와\n",
+      "https://v.daum.net/v/20221114172134518 연합뉴스 진에어, 3분기 영업손실 174억원…매출 늘고 손실 줄어 (서울=연합뉴스) 최평천 기자 = 진에어는 올해 3분기 매출이 1천745억원, 영업손실이 174억원을 기록했다고 14일 공시했다. 매출은 지난해 3분기 606억원 대비 188% 증가했고, 영업손실 규모는 작년 동기(445억원)보다 대폭 감소했다. 당기순손실은 지난해 3분기 589억원에서 올해 410억원으로 감소했다. 진에어는 환율 인상과 고유가, 코로나 재\n",
+      "https://v.daum.net/v/20221114171927435 연합뉴스 화천산천어축제 '로드 마케팅' 돌입…고속도 5천km 순회 (화천=연합뉴스) 이상학 기자 = 강원 화천군이 내년 초 열리는 '2023 얼음나라 화천산천어축제'의 성공을 위해 3년 만에 다시 고속도로 마케팅에 나섰다. 2023 화천산천어축제는 내년 1월 7일부터 29일까지 23일간 화천읍 화천천 일대에서 열린다. 화천군은 14일 현장 홍보활동에 나서 21일까지 8일간 일정으로 춘천에서 경남 고성까지 전국 주요 고속\n",
+      "https://v.daum.net/v/20221114171908427 한국경제TV 빠른 출고가 경쟁력…지금 SM6가 주목받는 이유 최근 자동차 브랜드의 중요한 경쟁력 중 하나는 '빠른 출고'다. 신차 출고 대기 기간이 수개월에서 2년을 훌쩍 넘어가며 '신차 출고 대란'이란 신조어까지 등장했다. 특히, 자동차 개별소비세 인하 혜택이 올해로 종료될 것으로 보이면서 연내 출고 가능한 자동차에 소비자들의 시선이 쏠리고 있다. 소비자가 요즘 가장 주목하는 모델 중 하나가 바로 르노코리아자동차\n",
+      "https://v.daum.net/v/20221114171839413 연합뉴스 국고채 금리, 관망세에 상승…CP금리도 연일 올라(종합) (서울=연합뉴스) 배영경 기자 = 지난주 미국 연방준비제도(Fed·연준)의 긴축정책 속도 조절 기대감이 다소 가라앉은 대신 관망세가 고개를 들며 14일 국고채 금리는 일제히 상승했다. 금리 상승은 채권가격 하락을 뜻한다. 이날 서울 채권시장에서 3년 만기 국고채 금리는 전 거래일보다 1.6bp(1bp=0.01%포인트) 오른 연 3.850%에 장을 마쳤다.\n",
+      "https://v.daum.net/v/20221114171814392 오마이뉴스 11만명 기다리던 차, 신형 그랜저 공개되다 [김종철 기자]          ▲  현대자동차는 14일  고품격 대형 세단, ‘디 올 뉴 그랜저(7세대 그랜저)’를  출시했다.    ⓒ 현대차    전국에 걸쳐 10만9000여명이 기다리고 있었다. 이들은 빠르면 이번달부터 순서대로 그들이 기다리던 바로'그 차'를 받게 된다. 현대자동차가 새롭게 내놓는 대형세단 신형 그랜저 이야기다.  현대자동차는 14\n",
+      "https://v.daum.net/v/20221114171603337 비즈니스워치 코오롱인더·효성첨단·태광산업, 슈퍼섬유 기대감 큰 이유 코오롱인더스트리, 태광산업, 효성첨단소재 등 화학·소재 기업들이 지난 3분기에 고전을 면하지 못했다. 경기 침체와 원재료 가격 상승 등의 영향 때문이다. 하지만 '아라미드'와 같은 '슈퍼 섬유' 사업은 기세를 높이면서 미래 성장에 대한 기대감을 키우고 있다. 경기 침체·원재료 가격상승 탓에 부진 14일 업계에 따르면 코오롱인더스트리, 태광산업, 효성첨단소\n",
+      "https://v.daum.net/v/20221114171521318 이데일리 FTX 붕괴 후폭풍…‘큰손’ 기관 투자자들, 암호화폐서 손뗀다(종합) [이데일리 방성훈 김상윤 기자] 거래량 기준 세계 3위였던 암호화폐 거래소 FTX의 파산 신청으로 ‘큰손’ 투자자들이 암호화폐 시장에서 잇따라 손을 떼고 있다. 올해 연이어 발생한 각종 사고로 암호화폐를 더이상 ‘디지털 금’과 같은 잠재적 투자 자산으로 보기 어렵다는 판단에서다. 특히 FTX가 고객 돈을 불법 유용한 정황이 드러난 데 이어, 파산 신청 직\n",
+      "https://v.daum.net/v/20221114171344261 뉴스1 교보생명, 3분기 순익 4667억원…전년 동기比 29%↓ (서울=뉴스1) 한유주 기자 = 교보생명은 올 3분기(7~9월) 연결기준 순이익이 전년 동기(6565억원) 대비 29% 줄어든 4667억원을 기록했다고 14일 공시했다. 교보생명은 내년 도입될 새회계기준인 신지급여력제도(KICS)에 대비하기 위해 단기채를 매도하고 장기채에 투자하는 자산운용 전략에 주력한 결과, 채권 매각 이익이 전년 동기 대비 줄어든\n",
+      "https://v.daum.net/v/20221114171334258 JIBS 주택 전망 \"앞이 안보여\"..역대 최악, 이러다 사업  접어야 규제 해제도 당장 '약발'이 먹히질 않는 모양새입니다. 고물가·고금리, 여기에 각종 원자재가격 상승에 자금 기반까지 휘청일 처지라 주택사업자들이 활로를 찾지 못해 고민만 키우게 됐습니다. '아직은 아니'라며 소비심리도 좀체 풀리지 않는 상황이라, 단기간 주택경기가 개선되기가 어려울 것이란 관측이 나오면서 선제 대책을 더 서둘러야할 것으로 보입니다. ■ 주\n",
+      "https://v.daum.net/v/20221114171306245 뉴스1 금융당국 은행에 \"과도한 자금조달 경쟁 자제해달라\" (서울=뉴스1) 신병남 기자 = 금융당국이 제2금융권의 유동성 부족을 일으킬 수 있다며 은행들의 과도한 자금조달 경쟁을 자제해 달라고 주문했다. 금융위원회와 금융감독원은 14일 은행권 금융시장 점검회의를 개최했다고 밝혔다. 지난달 20일, 26일에 이은 세 번째 개최다. 금융위 금융산업국장 주재로 진행된 회의에는 금감원 은행감독국장을 비롯해 은행연합회\n",
+      "https://v.daum.net/v/20221114171020153 머니투데이 中에서 전기차 불티나게 팔리니…톤당 1억 돌파한 이 광물 중국 전기차 판매 급증으로 전기차 배터리의 핵심 원재료인 리튬 가격이 톤(t)당 1억원을 돌파했다. 중국  업체들이 전방위적인 리튬 자원 확보에 나선 가운데 내년엔 리튬 가격이 하락할 수 있다는 경고도 나온다. 14일 증권일보는 지난 11일 배터리용 탄산리튬 현물가격이 t당 59만 위안(약 1억1100만원)까지 상승하며 사상 최고치를 경신했다고 보도했다\n",
+      "https://v.daum.net/v/20221114171003143 서울신문 스마일게이트, 계열사 통해... 코로나 때 번 돈 어디에 썼을까 2019년부터 시작된 코로나19 대유행은 게임업계에 큰 호황을 불러왔다. 최근 3년 간 많은 중소 게임회사가 수백억~수천억원 매출을 올리고 중견 회사로 성장했으며, 중견 게임사는 대형, 글로벌 회사로 성장했다. 각 게임사는 그간 벌어들인 돈을 각자의 방식으로 사용하고 있다. 새 건물을 짓거나, 해외 개발사를 인수하거나, 사업 영역을 게임 밖으로 확장하기도\n",
+      "https://v.daum.net/v/20221114170908121 연합뉴스 무안공항, 16일 국제선 재개…내년 초까지 6개노선 운항 (무안=연합뉴스) 박철홍 기자 = 전남 무안군은 무안국제공항에서 오는 16일부터 동계시즌 국제선 운항을 재개한다고 14일 밝혔다. 지난 7월 한 달간 베트남, 태국, 몽골 5개 노선 운항이 일시 재개된 후 또다시 장기간 국제선 운항 중단을 겪은 무안공항은 검역 조치 완화 이후 지역 여행 경기 회복과 함께 다양한 전세기 여행사들의 참여로 국제선 운항을 재개하\n",
+      "https://v.daum.net/v/20221114170855106 연합뉴스 식품업계 매출 증가에도 영업익은 감소…\"원재룟값 증가 영향\" (서울=연합뉴스) 신선미 기자 = 국내 식품기업들의 3분기 매출은 지난해 같은 기간과 비교해 크게 늘었지만, 일부 기업의 경우 영업이익이 오히려 감소한 것으로 나타났다. 영업이익 감소는 원·부자재 가격 급등에 원/달러 환율까지 상승하면서 수입단가가 오른데다 물류비 등도 증가한 데 따른 것이다. 14일 식품업계에 따르면 농심의 연결 기준 올해 3분기 매출은\n",
+      "https://v.daum.net/v/20221114170837094 경향신문 세계 3위 코인 거래소 FTX 파산 신청…“루나·테라와 달리 기존 금융권에도 영향 미칠 것” 세계 3위 가상화폐 거래소 FTX의 파산 신청에 따른 충격이 일파만파 커지고 있다. 국내외 금융권에서는 가상화폐 시장을 넘어 채권,증권시장 등 기존 금융권도 FTX 사태의 영향을 받을 것이라는 전망이 나오고 있다. FTX에 투자한 벤처캐피털(VC), 연금펀드, 자산운용사 등이 적지 않은 것으로 알려졌다. “가상화폐 업계 넘어 기존 금융권에도 피해 확산” 1\n",
+      "https://v.daum.net/v/20221114170804080 비즈니스워치 이복현, 금융지주 이사회에 \"CEO 선임 공정·투명\" 재강조 이복현 금융감독원장이 8개 은행 계열 금융지주 이사회 의장들에게 내부통제 강화와 지배구조 개선에 적극적으로 나서 줄 것을 주문했다. 내부통제 체계를 경영진에만 맡겨 놓으면 성과 우선주의 등으로 실효성이 떨어지기 쉬운 만큼 이사회의 역할이 절실하다는 것이다.  특히 이 원장은 다수 금융지주가 최고경영자(CEO) 교체기를 맞은 상황에서 CEO 선임의 '공정성·\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 네트워크 분석 - ajax 크롤링\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "response = requests.get(\"https://news.daum.net/api/harmonydic/contents/news.json?category=economic&approved=true&page=1&pageSize=20&pagesToShow=10&range=1\")\n",
+    "\n",
+    "# 문자열 json을 딕셔너리로 변환\n",
+    "data = json.loads(response.text)\n",
+    "articles = data['list']\n",
+    "for article in articles:\n",
+    "    link = article['contentUrl']\n",
+    "    press = article['cpKorName']\n",
+    "    title = article['title']\n",
+    "    content = article['summary']\n",
+    "    print(link, press, title, content)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
