--- a/06.동적인페이지크롤링/03.다음경제뉴스크롤링.ipynb
+++ b/06.동적인페이지크롤링/03.다음경제뉴스크롤링.ipynb
@@ -62,44 +62,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://v.daum.net/v/20221114172451636 연합뉴스 전자·반도체 주요기업 연구개발·투자로 '불황 뚫기' 나섰다 3분기 누계 삼성전자 R&D 18.4조원 '역대 최대' LG전자·SK하이닉스 투자금액 30% 이상 증가 (서울=연합뉴스) 김아람 기자 = 올해 글로벌 경기 침체로 인한 불확실성 확대에도 주요 기업들이 연구개발(R&D)과 투자 확대로 불황 뚫기에 힘쓰고 있다. 14일 삼성전자가 공시한 분기보고서를 보면 삼성전자의 R&D 비용은 올해 3분기 누적 기준 18조4\n",
-      "https://v.daum.net/v/20221114172400587 매일경제 테슬라 급발진 의심 사고...사망 2명·부상 3명, 원인 놓고 공방 중국에서 테슬라 전기차가 급발진으로 추정되는 사고를 내 2명이 숨지고 3명이 다쳤다. 이에 중국 전역에서 테슬라의 기술력을 질타하는 목소리가 나오고 있다. 하지만 테슬라는 운전자의 제동 미숙을 사고 원인으로 지목하고 있다. 14일 상유신문·지무뉴스·환구시보 등에 따르면 지난 5일 중국 광둥성 차오저우시 라오핑현에서 테슬라 모델Y가 빠른 속도로 2㎞를 질주하\n",
-      "https://v.daum.net/v/20221114172354580 서울경제 아시아나 운명의 한 주···美·英 기업결합 심사 나온다 [서울경제] 아시아나항공(020560)의 앞날을 좌우할 ‘운명의 주’가 시작됐다. 대한항공(003490)과의 기업결합에 중대한 영향을 미칠 주요국의 심사 결과 발표가 다가왔기 때문이다. 완전자본잠식은 가까스로 피했지만 아시아나항공은 기업결합 심사 종료 후 대한항공의 자금을 수혈받아야 생존을 도모할 수 있는 만큼 해외 경쟁당국의 심사 결과에 촉각을 곤두세우고\n",
-      "https://v.daum.net/v/20221114172201528 뉴시스 국토부, 화물연대 총파업 예고에 \"국회서 논의 중…내일 면담\" 기사내용 요약 국토부-화물연대, 15일 오후 면담 진행 국토부 측 \"이미 국회서 입법 논의 중\" \"정부가 할 일은 한정적, 대화는 계속\" [서울=뉴시스] 고가혜 기자 = 전국민주노동조합총연맹(민주노총) 소속 화물연대 노동자들이 안전운임 일몰제 폐지 등을 요구하며 5개월 만의 전면 총파업을 다시 선언한 가운데, 국토교통부가 오는 15일 화물연대와\n",
-      "https://v.daum.net/v/20221114172134518 연합뉴스 진에어, 3분기 영업손실 174억원…매출 늘고 손실 줄어 (서울=연합뉴스) 최평천 기자 = 진에어는 올해 3분기 매출이 1천745억원, 영업손실이 174억원을 기록했다고 14일 공시했다. 매출은 지난해 3분기 606억원 대비 188% 증가했고, 영업손실 규모는 작년 동기(445억원)보다 대폭 감소했다. 당기순손실은 지난해 3분기 589억원에서 올해 410억원으로 감소했다. 진에어는 환율 인상과 고유가, 코로나 재\n",
-      "https://v.daum.net/v/20221114171927435 연합뉴스 화천산천어축제 '로드 마케팅' 돌입…고속도 5천km 순회 (화천=연합뉴스) 이상학 기자 = 강원 화천군이 내년 초 열리는 '2023 얼음나라 화천산천어축제'의 성공을 위해 3년 만에 다시 고속도로 마케팅에 나섰다. 2023 화천산천어축제는 내년 1월 7일부터 29일까지 23일간 화천읍 화천천 일대에서 열린다. 화천군은 14일 현장 홍보활동에 나서 21일까지 8일간 일정으로 춘천에서 경남 고성까지 전국 주요 고속\n",
-      "https://v.daum.net/v/20221114171908427 한국경제TV 빠른 출고가 경쟁력…지금 SM6가 주목받는 이유 최근 자동차 브랜드의 중요한 경쟁력 중 하나는 '빠른 출고'다. 신차 출고 대기 기간이 수개월에서 2년을 훌쩍 넘어가며 '신차 출고 대란'이란 신조어까지 등장했다. 특히, 자동차 개별소비세 인하 혜택이 올해로 종료될 것으로 보이면서 연내 출고 가능한 자동차에 소비자들의 시선이 쏠리고 있다. 소비자가 요즘 가장 주목하는 모델 중 하나가 바로 르노코리아자동차\n",
-      "https://v.daum.net/v/20221114171839413 연합뉴스 국고채 금리, 관망세에 상승…CP금리도 연일 올라(종합) (서울=연합뉴스) 배영경 기자 = 지난주 미국 연방준비제도(Fed·연준)의 긴축정책 속도 조절 기대감이 다소 가라앉은 대신 관망세가 고개를 들며 14일 국고채 금리는 일제히 상승했다. 금리 상승은 채권가격 하락을 뜻한다. 이날 서울 채권시장에서 3년 만기 국고채 금리는 전 거래일보다 1.6bp(1bp=0.01%포인트) 오른 연 3.850%에 장을 마쳤다.\n",
-      "https://v.daum.net/v/20221114171814392 오마이뉴스 11만명 기다리던 차, 신형 그랜저 공개되다 [김종철 기자]          ▲  현대자동차는 14일  고품격 대형 세단, ‘디 올 뉴 그랜저(7세대 그랜저)’를  출시했다.    ⓒ 현대차    전국에 걸쳐 10만9000여명이 기다리고 있었다. 이들은 빠르면 이번달부터 순서대로 그들이 기다리던 바로'그 차'를 받게 된다. 현대자동차가 새롭게 내놓는 대형세단 신형 그랜저 이야기다.  현대자동차는 14\n",
-      "https://v.daum.net/v/20221114171603337 비즈니스워치 코오롱인더·효성첨단·태광산업, 슈퍼섬유 기대감 큰 이유 코오롱인더스트리, 태광산업, 효성첨단소재 등 화학·소재 기업들이 지난 3분기에 고전을 면하지 못했다. 경기 침체와 원재료 가격 상승 등의 영향 때문이다. 하지만 '아라미드'와 같은 '슈퍼 섬유' 사업은 기세를 높이면서 미래 성장에 대한 기대감을 키우고 있다. 경기 침체·원재료 가격상승 탓에 부진 14일 업계에 따르면 코오롱인더스트리, 태광산업, 효성첨단소\n",
-      "https://v.daum.net/v/20221114171521318 이데일리 FTX 붕괴 후폭풍…‘큰손’ 기관 투자자들, 암호화폐서 손뗀다(종합) [이데일리 방성훈 김상윤 기자] 거래량 기준 세계 3위였던 암호화폐 거래소 FTX의 파산 신청으로 ‘큰손’ 투자자들이 암호화폐 시장에서 잇따라 손을 떼고 있다. 올해 연이어 발생한 각종 사고로 암호화폐를 더이상 ‘디지털 금’과 같은 잠재적 투자 자산으로 보기 어렵다는 판단에서다. 특히 FTX가 고객 돈을 불법 유용한 정황이 드러난 데 이어, 파산 신청 직\n",
-      "https://v.daum.net/v/20221114171344261 뉴스1 교보생명, 3분기 순익 4667억원…전년 동기比 29%↓ (서울=뉴스1) 한유주 기자 = 교보생명은 올 3분기(7~9월) 연결기준 순이익이 전년 동기(6565억원) 대비 29% 줄어든 4667억원을 기록했다고 14일 공시했다. 교보생명은 내년 도입될 새회계기준인 신지급여력제도(KICS)에 대비하기 위해 단기채를 매도하고 장기채에 투자하는 자산운용 전략에 주력한 결과, 채권 매각 이익이 전년 동기 대비 줄어든\n",
-      "https://v.daum.net/v/20221114171334258 JIBS 주택 전망 \"앞이 안보여\"..역대 최악, 이러다 사업  접어야 규제 해제도 당장 '약발'이 먹히질 않는 모양새입니다. 고물가·고금리, 여기에 각종 원자재가격 상승에 자금 기반까지 휘청일 처지라 주택사업자들이 활로를 찾지 못해 고민만 키우게 됐습니다. '아직은 아니'라며 소비심리도 좀체 풀리지 않는 상황이라, 단기간 주택경기가 개선되기가 어려울 것이란 관측이 나오면서 선제 대책을 더 서둘러야할 것으로 보입니다. ■ 주\n",
-      "https://v.daum.net/v/20221114171306245 뉴스1 금융당국 은행에 \"과도한 자금조달 경쟁 자제해달라\" (서울=뉴스1) 신병남 기자 = 금융당국이 제2금융권의 유동성 부족을 일으킬 수 있다며 은행들의 과도한 자금조달 경쟁을 자제해 달라고 주문했다. 금융위원회와 금융감독원은 14일 은행권 금융시장 점검회의를 개최했다고 밝혔다. 지난달 20일, 26일에 이은 세 번째 개최다. 금융위 금융산업국장 주재로 진행된 회의에는 금감원 은행감독국장을 비롯해 은행연합회\n",
-      "https://v.daum.net/v/20221114171020153 머니투데이 中에서 전기차 불티나게 팔리니…톤당 1억 돌파한 이 광물 중국 전기차 판매 급증으로 전기차 배터리의 핵심 원재료인 리튬 가격이 톤(t)당 1억원을 돌파했다. 중국  업체들이 전방위적인 리튬 자원 확보에 나선 가운데 내년엔 리튬 가격이 하락할 수 있다는 경고도 나온다. 14일 증권일보는 지난 11일 배터리용 탄산리튬 현물가격이 t당 59만 위안(약 1억1100만원)까지 상승하며 사상 최고치를 경신했다고 보도했다\n",
-      "https://v.daum.net/v/20221114171003143 서울신문 스마일게이트, 계열사 통해... 코로나 때 번 돈 어디에 썼을까 2019년부터 시작된 코로나19 대유행은 게임업계에 큰 호황을 불러왔다. 최근 3년 간 많은 중소 게임회사가 수백억~수천억원 매출을 올리고 중견 회사로 성장했으며, 중견 게임사는 대형, 글로벌 회사로 성장했다. 각 게임사는 그간 벌어들인 돈을 각자의 방식으로 사용하고 있다. 새 건물을 짓거나, 해외 개발사를 인수하거나, 사업 영역을 게임 밖으로 확장하기도\n",
-      "https://v.daum.net/v/20221114170908121 연합뉴스 무안공항, 16일 국제선 재개…내년 초까지 6개노선 운항 (무안=연합뉴스) 박철홍 기자 = 전남 무안군은 무안국제공항에서 오는 16일부터 동계시즌 국제선 운항을 재개한다고 14일 밝혔다. 지난 7월 한 달간 베트남, 태국, 몽골 5개 노선 운항이 일시 재개된 후 또다시 장기간 국제선 운항 중단을 겪은 무안공항은 검역 조치 완화 이후 지역 여행 경기 회복과 함께 다양한 전세기 여행사들의 참여로 국제선 운항을 재개하\n",
-      "https://v.daum.net/v/20221114170855106 연합뉴스 식품업계 매출 증가에도 영업익은 감소…\"원재룟값 증가 영향\" (서울=연합뉴스) 신선미 기자 = 국내 식품기업들의 3분기 매출은 지난해 같은 기간과 비교해 크게 늘었지만, 일부 기업의 경우 영업이익이 오히려 감소한 것으로 나타났다. 영업이익 감소는 원·부자재 가격 급등에 원/달러 환율까지 상승하면서 수입단가가 오른데다 물류비 등도 증가한 데 따른 것이다. 14일 식품업계에 따르면 농심의 연결 기준 올해 3분기 매출은\n",
-      "https://v.daum.net/v/20221114170837094 경향신문 세계 3위 코인 거래소 FTX 파산 신청…“루나·테라와 달리 기존 금융권에도 영향 미칠 것” 세계 3위 가상화폐 거래소 FTX의 파산 신청에 따른 충격이 일파만파 커지고 있다. 국내외 금융권에서는 가상화폐 시장을 넘어 채권,증권시장 등 기존 금융권도 FTX 사태의 영향을 받을 것이라는 전망이 나오고 있다. FTX에 투자한 벤처캐피털(VC), 연금펀드, 자산운용사 등이 적지 않은 것으로 알려졌다. “가상화폐 업계 넘어 기존 금융권에도 피해 확산” 1\n",
-      "https://v.daum.net/v/20221114170804080 비즈니스워치 이복현, 금융지주 이사회에 \"CEO 선임 공정·투명\" 재강조 이복현 금융감독원장이 8개 은행 계열 금융지주 이사회 의장들에게 내부통제 강화와 지배구조 개선에 적극적으로 나서 줄 것을 주문했다. 내부통제 체계를 경영진에만 맡겨 놓으면 성과 우선주의 등으로 실효성이 떨어지기 쉬운 만큼 이사회의 역할이 절실하다는 것이다.  특히 이 원장은 다수 금융지주가 최고경영자(CEO) 교체기를 맞은 상황에서 CEO 선임의 '공정성·\n"
+      "https://v.daum.net/v/20221114174144183 서울경제 리딩방 사기부터 '돼지도살'까지···6년간 국내 피해액만 5조\n",
+      "https://v.daum.net/v/20221114173946133 연합뉴스 공정위 '결제수수료 담합 의혹' 배민·요기요·쿠팡이츠 조사\n",
+      "https://v.daum.net/v/20221114173919114 서울경제 '3기 신도시' 첫 테이프 끊는 계양···2026년까지 1.7만가구 공급\n",
+      "https://v.daum.net/v/20221114173912107 매일경제 3기 신도시 첫삽…\"공급 시기는 탄력 조정\"\n",
+      "https://v.daum.net/v/20221114173900090 YTN [생생경제] 주요 시중은행 예금 금리 5% 시대, 머니 무브는 어디로?\n",
+      "https://v.daum.net/v/20221114173844085 연합뉴스 관광업 지원 컨트롤타워 '광주 관광기업 지원센터' 개소\n",
+      "https://v.daum.net/v/20221114173802067 비즈니스워치 한화솔루션 종잣돈 마련법 '뗐다 붙였다 쪼개팔기'\n",
+      "https://v.daum.net/v/20221114173704049 뉴시스 LG이노텍, 스마트폰 부품 성장…설비투자·임직원 수 급증\n",
+      "https://v.daum.net/v/20221114173506991 한국경제 돌려막기 '급급'…신협·새마을금고 '高금리 예금' 주의보\n",
+      "https://v.daum.net/v/20221114173505990 한겨레 [뉴스AS] “오봉역 철도노동자 사망 배경은 ‘인력 증원 빠진’ 4조2교대”\n",
+      "https://v.daum.net/v/20221114173454983 뉴시스 집값 6억 확대 '안심전환대출' 5일간 1.9조 신청\n",
+      "https://v.daum.net/v/20221114173409967 연합뉴스 롯데면세점, 중국 봉쇄에도 리오프닝 효과에 3분기 흑자전환\n",
+      "https://v.daum.net/v/20221114173306922 매일경제 손해보험 대상이었던 반려동물...드디어 생명보험 들 수 있나\n",
+      "https://v.daum.net/v/20221114173251910 연합뉴스 부산국제금융진흥원, 프랑크푸르트 금융센터와 업무협력\n",
+      "https://v.daum.net/v/20221114172843764 서울경제 \"가짜코인 확인하세요\"···암호화폐 업체들 '사기와의 전쟁'\n",
+      "https://v.daum.net/v/20221114172451636 연합뉴스 전자·반도체 주요기업 연구개발·투자로 '불황 뚫기' 나섰다\n",
+      "https://v.daum.net/v/20221114172400587 매일경제 테슬라 급발진 의심 사고...사망 2명·부상 3명, 원인 놓고 공방\n",
+      "https://v.daum.net/v/20221114172354580 서울경제 아시아나 운명의 한 주···美·英 기업결합 심사 나온다\n",
+      "https://v.daum.net/v/20221114172208531 아시아경제 파산 신청한 FTX…해외 이용자 중 韓 비중 '최고'\n",
+      "https://v.daum.net/v/20221114172201528 뉴시스 국토부, 화물연대 총파업 예고에 \"국회서 논의 중…내일 면담\"\n",
+      "https://v.daum.net/v/20221114172134518 연합뉴스 진에어, 3분기 영업손실 174억원…매출 늘고 손실 줄어\n",
+      "https://v.daum.net/v/20221114171927435 연합뉴스 화천산천어축제 '로드 마케팅' 돌입…고속도 5천km 순회\n",
+      "https://v.daum.net/v/20221114171908427 한국경제TV 빠른 출고가 경쟁력…지금 SM6가 주목받는 이유\n",
+      "https://v.daum.net/v/20221114171839413 연합뉴스 국고채 금리, 관망세에 상승…CP금리도 연일 올라(종합)\n",
+      "https://v.daum.net/v/20221114171814392 오마이뉴스 11만명 기다리던 차, 신형 그랜저 공개되다\n",
+      "https://v.daum.net/v/20221114171605340 MBC 코스피, 차익실현 매물 출회로 2470선 하락 마감\n",
+      "https://v.daum.net/v/20221114171603337 비즈니스워치 코오롱인더·효성첨단·태광산업, 슈퍼섬유 기대감 큰 이유\n",
+      "https://v.daum.net/v/20221114171521318 이데일리 FTX 붕괴 후폭풍…‘큰손’ 기관 투자자들, 암호화폐서 손뗀다(종합)\n",
+      "https://v.daum.net/v/20221114171432283 서울경제 \"GTX-C 노선 우회하라\" 은마 재건축 조합, 정의선 자택 앞 집회\n",
+      "https://v.daum.net/v/20221114171344261 뉴스1 교보생명, 3분기 순익 4667억원…전년 동기比 29%↓\n",
+      "https://v.daum.net/v/20221114171334258 JIBS 주택 전망 \"앞이 안보여\"..역대 최악, 이러다 사업  접어야\n",
+      "https://v.daum.net/v/20221114171306245 뉴스1 금융당국 은행에 \"과도한 자금조달 경쟁 자제해달라\"\n",
+      "https://v.daum.net/v/20221114171020153 머니투데이 中에서 전기차 불티나게 팔리니…'하얀 석유' 톤당 1.1억 돌파\n",
+      "https://v.daum.net/v/20221114171003143 서울신문 스마일게이트, 계열사 통해... 코로나 때 번 돈 어디에 썼을까\n",
+      "https://v.daum.net/v/20221114170908121 연합뉴스 무안공항, 16일 국제선 재개…내년 초까지 6개노선 운항\n",
+      "https://v.daum.net/v/20221114170855106 연합뉴스 식품업계 매출 증가에도 영업익은 감소…\"원재룟값 증가 영향\"\n",
+      "https://v.daum.net/v/20221114170837094 경향신문 세계 3위 코인 거래소 FTX 파산 신청…“루나·테라와 달리 기존 금융권에도 영향 미칠 것”\n",
+      "https://v.daum.net/v/20221114170804080 비즈니스워치 이복현, 금융지주 이사회에 \"CEO 선임 공정·투명\" 재강조\n",
+      "https://v.daum.net/v/20221114170715061 국민일보 ‘영끌’ 빚더미에 씨마른 일자리… 청년이 제일 힘들다\n",
+      "https://v.daum.net/v/20221114170651046 연합뉴스 금융위 부위원장 \"가상자산 거래소 이용자 자산 보호장치 필요\"(종합)\n",
+      "https://v.daum.net/v/20221114170534004 연합뉴스 日 소프트뱅크, 비전펀드·FTX 투자 손실 등에 급락\n",
+      "https://v.daum.net/v/20221114170507975 서울경제 \"싹쓸이 외지인 사라졌다\"···두배 뛴 주택, 순식간 '뚝뚝'\n",
+      "https://v.daum.net/v/20221114170416945 MBC 시중은행 정기예금 금리 연 5% 돌파\n",
+      "https://v.daum.net/v/20221114170011790 한국일보 14년 만에 예금이자 5% 시대... \"1억에 500만 원이 어디냐\"\n",
+      "https://v.daum.net/v/20221114170007782 한국경제 로봇산업, 성장은 확실한데 어디에 투자해야하나\n",
+      "https://v.daum.net/v/20221114170006780 한국일보 내년 5월부터 온라인 신용대출 갈아타기 쉬워진다\n",
+      "https://v.daum.net/v/20221114170004775 노컷뉴스 한기정, 독과점 플랫폼 제재 강조…필요하다면 법제화도 검토\n",
+      "https://v.daum.net/v/20221114165946755 머니투데이 돌아온 '각 그랜저' 실물보니 존재감 확실…\"1년 기다릴만하네\"\n",
+      "https://v.daum.net/v/20221114165931750 뉴시스 손보업계 지각 변동…메리츠화재, 업계 2위로 올라서나\n",
+      "https://v.daum.net/v/20221114165919744 서울경제 \"너무 튀었나\"···골프·희토류 이색테마 ETF, 거래부진에 상폐주의보\n",
+      "https://v.daum.net/v/20221114165748696 이데일리 NH농협·BNK 지주회장 선임 절차 돌입…키워드는 '외풍'\n",
+      "https://v.daum.net/v/20221114165713681 경향신문 전장연, 지하철 출근시위 한주간 멈춘다···“예산 6000억 증액안 통과 지켜볼 것”\n",
+      "https://v.daum.net/v/20221114165450608 중앙일보 中 방역과 부동산 규제 완화로 부양책 시동…\"효과는 미지수\"\n",
+      "https://v.daum.net/v/20221114165447607 연합뉴스 아시아나, 흑자행진에도 재무구조 악화…부채비율 1만% 넘어(종합)\n",
+      "https://v.daum.net/v/20221114165438601 뉴스1 금감원, 경남은행에 라임펀드 손배 결정…40~80%서 자율조정\n",
+      "https://v.daum.net/v/20221114165426596 머니투데이 尹에 \"韓기업 고려\" 밝힌 바이든, '보조금 차별' 3년 미뤄줄까\n",
+      "https://v.daum.net/v/20221114165335565 경향신문 ‘네옴시티’ 들고 오는 사우디 왕세자, 이재용 또 만날까\n",
+      "https://v.daum.net/v/20221114165236537 경향신문 ‘각그랜저’ 향수 저격한 그랜저 7세대···G80보다 길어졌다\n",
+      "https://v.daum.net/v/20221114165224527 연합뉴스 금융당국, 은행에 \"은행채 발행 시기·규모 조절해달라\"\n",
+      "https://v.daum.net/v/20221114165100460 매일경제 이익전망 뚝뚝 와중에...4개분기 연속 어닝서프라이즈株 ‘촉이 오네’\n",
+      "https://v.daum.net/v/20221114164947418 뉴시스 금융당국 \"은행, 2금융권 유동성 부족 않도록 과도한 자금조달 자제\"\n",
+      "https://v.daum.net/v/20221114164916406 연합뉴스 BNK금융지주 일시 대표이사에 정성재 선정…경영승계 절차 개시\n",
+      "https://v.daum.net/v/20221114164842394 머니투데이 악! 이자 또 올랐다…대출 받아 집 산 70% \"버거워요\"\n",
+      "https://v.daum.net/v/20221114164800372 매일경제 “이젠 떠날 때”...돌아온 6만전자에 개인 7650억원 팔았다\n",
+      "https://v.daum.net/v/20221114164702344 한국경제 \"참다못해 11월에 샀습니다\"…2030 폭풍 검색한 물건\n",
+      "https://v.daum.net/v/20221114164528296 데일리안 '11만대' 인기모델 그랜저도 전기차 시대엔 사라진다\n",
+      "https://v.daum.net/v/20221114164505280 조선비즈 [마켓뷰] 코스피, 2470선 하락 마감… FTX 악재에 가상화폐株 ‘급락’\n",
+      "https://v.daum.net/v/20221114164502273 머니투데이 LG엔솔·삼성SDI·SK온, 불경기 고민도 해법도 '3사 3색'\n",
+      "https://v.daum.net/v/20221114164413248 이데일리 낮은 금리로 '대출 갈아타기' 허용…넘어야 할 산은?\n",
+      "https://v.daum.net/v/20221114164315213 MBC 금감원, 경남은행 판매 라임펀드 손해배상 최대 70% 결정\n",
+      "https://v.daum.net/v/20221114164305208 MBC 코스피, 소폭 하락 마감‥원·달러 환율은 상승\n",
+      "https://v.daum.net/v/20221114164236194 머니S '규제 해제' 효과 있네… 대구·울산만 주택경기 전망 '긍정적'\n",
+      "https://v.daum.net/v/20221114164219183 경향신문 원·달러 환율 숨고르기···7.5원 오른 1325.9원 마감\n",
+      "https://v.daum.net/v/20221114164219182 중앙일보 '각 그랜저' 귀환에 벌써 11만명 줄섰다…가격 3716만원부터\n",
+      "https://v.daum.net/v/20221114164132129 연합뉴스 K푸드 인기에 해외사업 성장…CJ제일제당 3분기 영업익 11.8%↑(종합)\n",
+      "https://v.daum.net/v/20221114164103108 서울신문 허경환, ‘27억대 사기’ 딛고 80억원 건물주 됐다\n",
+      "https://v.daum.net/v/20221114164023078 뉴시스 아시아나, 3분기 영업익 2293억…6분기 연속 흑자\n",
+      "https://v.daum.net/v/20221114164021072 뉴시스 코스맥스, 中봉쇄 여파 3Q 영업익 21%↓ \"내년 1Q 회복 전망\"\n",
+      "https://v.daum.net/v/20221114163902016 한국경제 물가 오르는데 취업난은 여전…청년들 '경제고통' 심각\n",
+      "https://v.daum.net/v/20221114163801976 한국경제 [단독] 권혁빈 스마일게이트 창업자 이혼 소송…\"세기의 재산분할\"\n",
+      "https://v.daum.net/v/20221114163602882 한국경제 헤드램프 기술의 진화…요즘 신차엔 안개등이 없다\n",
+      "https://v.daum.net/v/20221114163510842 머니투데이 서울~부산 20분대 '하이퍼튜브' 급제동…예타 탈락에 회의론까지\n",
+      "https://v.daum.net/v/20221114163503826 쿠키뉴스 공정위원장 “플랫폼 독과점 법제화 검토…공정경쟁 확립”\n",
+      "https://v.daum.net/v/20221114163501825 뉴스1 해외여행 상승세 탔다…모두투어, 3분기 적자폭 48.9% 개선(상보)\n",
+      "https://v.daum.net/v/20221114163447815 연합뉴스 휴마시스, 3분기 영업손실 91억…진단키트 수요감소속 적자전환\n",
+      "https://v.daum.net/v/20221114163324766 매일경제 “왜 나만 돈에 쪼들리나”...국민 절반 이상 주거비 부담에 박탈감\n",
+      "https://v.daum.net/v/20221114163311757 매경이코노미 美 IRA 타고 반도체 이을 주도주로…약세장 무색한 2차전지株\n",
+      "https://v.daum.net/v/20221114163301738 매일경제 ‘전월세 난’은 커녕 매물 남아 돈다…서울에만 8만 건 넘는데 거래는 바닥\n",
+      "https://v.daum.net/v/20221114163258733 뉴시스 포스코 \"재난대응 체계 보완, 생산 지속전략 세운다\"\n",
+      "https://v.daum.net/v/20221114163022658 노컷뉴스 체감경제 고통지수, 청년층 가장 높다…취업난‧고물가 영향\n",
+      "https://v.daum.net/v/20221114163012648 노컷뉴스 \"대기자만 11만명 육박\"…현대차, '세단의 제왕' 7세대 그랜저 출시\n",
+      "https://v.daum.net/v/20221114163005635 이데일리 우윳값·택시비·전기료 다 오른다…'물가 상승' 부채질 우려\n",
+      "https://v.daum.net/v/20221114163004634 노컷뉴스 구글, 대선 당시 '이재명 녹취록' 삭제 요청 사실상 거부\n",
+      "https://v.daum.net/v/20221114162926607 머니투데이 BNK금융 일시 대표에 정성재 전무…CEO선임 절차 개시(종합)\n",
+      "https://v.daum.net/v/20221114162844587 연합뉴스 \"외국인 자금, 미중갈등 '대안' 찾아 韓 반도체주 등 집중 유입\"\n",
+      "https://v.daum.net/v/20221114162705536 뉴스1 [시황종합]코스피, 차익실현 물량에 0.34% 하락한 2474선 마감\n",
+      "https://v.daum.net/v/20221114162657526 머니투데이 '335억 규모' 삼바 주식, 17차례 매도한 김태한 의장…회사 떠나나\n",
+      "https://v.daum.net/v/20221114162602499 한국경제 최고 실적 질주하던 철강사 '어닝 쇼크'\n",
+      "https://v.daum.net/v/20221114162600495 뉴시스 금융위 손태승 회장 중징계 압박에…백혜련 정무위원장 \"낙하산 안돼\"\n",
+      "https://v.daum.net/v/20221114162429439 경향신문 ‘울며 겨자먹기’···은행권, 대환대출 플랫폼 꺼리는 이유는\n"
      ]
     }
    ],
    "source": [
-    "# 네트워크 분석 - ajax 크롤링\n",
+    "# 2. 네트워크 분석 -> Ajax 크롤링\n",
     "import requests\n",
     "import json\n",
     "\n",
-    "response = requests.get(\"https://news.daum.net/api/harmonydic/contents/news.json?category=economic&approved=true&page=1&pageSize=20&pagesToShow=10&range=1\")\n",
-    "\n",
-    "# 문자열 json을 딕셔너리로 변환\n",
+    "response = requests.get(f'https://news.daum.net/api/harmonydic/contents/news.json?category=economic&approved=true&page=1&pageSize=100&pagesToShow=10&range=1')\n",
     "data = json.loads(response.text)\n",
     "articles = data['list']\n",
     "for article in articles:\n",
@@ -107,7 +185,7 @@
     "    press = article['cpKorName']\n",
     "    title = article['title']\n",
     "    content = article['summary']\n",
-    "    print(link, press, title, content)"
+    "    print(link, press, title)"
    ]
   },
   {
